--- a/.github/workflows/gin.yml
+++ b/.github/workflows/gin.yml
@@ -12,33 +12,16 @@ permissions:
   contents: read
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "^1"
-      - name: Setup golangci-lint
-        uses: golangci/golangci-lint-action@v8
-        with:
-          version: v2.1.6
-          args: --verbose
   test:
-    needs: lint
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        go: ["1.23", "1.24"]
+        os: [ ubuntu-latest, macos-latest ]
+        go: [ "1.20", "1.21" ]
         test-tags:
           [
             "",
             "-tags nomsgpack",
-            '--ldflags="-checklinkname=0" -tags sonic',
+            '-tags sonic',
             "-tags go_json",
             "-race",
           ]
